[project]
name = "astarmiko_async"
version = "0.2.0"
description = "Asynchronous network automation with CLI, logging, and configuration management"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "aiofiles",
    "asyncssh",
    "tqdm",
    "astarconf>=1.0.3",
    "requests"
]

[project.scripts]
astarmiko-cli = "astarmiko_async.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/astaraiki/astarmiko_async"
Documentation = "https://github.com/astaraiki/astarmiko_async/wiki"
Issues = "https://github.com/astaraiki/astarmiko_async/issues"

